2008-07-11  Sam Steingold  <sds@gnu.org>

	* pathname.d (error_directory): extracted from the unix version of
	assure_dir_exists
	(assure_dir_exists) [WIN32_NATIVE]: use it instead of
	OS_file_error for consistency with unix
	(struct file_status) [WIN32_NATIVE]: new slot fs_fileattr
	(file_status_is_dir): new function
	(get_path_info) [PATHNAME_UNIX]: extracted from assure_dir_exists
	(assure_dir_exists) [PATHNAME_UNIX]: use it
	(if_HAVE_LSTAT): remove
	(access0) [WIN32_NATIVE]: set fs_fileattr

2008-07-10  Sam Steingold  <sds@gnu.org>

	* init.lisp (search-file <final def>): do not use DIRECTORY when
	the pathname is non-wild to avoid the denial-of-service attack

2008-07-10  Sam Steingold  <sds@gnu.org>

	* encoding.d (error_nls_invalid): print function name
	* pathname.d (check_no_wildcards): ditto

2008-07-10  Sam Steingold  <sds@gnu.org>

	* debug.d (read_form): fix a GC-safety bug
	 (save function before subsstring)
	* foreign.d (check_faddress_valid): fix a GC-safety bug
	 (check_fpointer can trigger GC!)
	(validate_fpointer): return the argument
	(convert_to_foreign): fix a GC-safety bug
	 (validate_fpointer can trigger GC)
	* modules/clx/new-clx/clx.f (XLIB:SCREEN-SAVER): fix a GC-safety bug
	 (defcheckers are GC-unsafe)

2008-07-10  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2015118 ]: (ash 1 huge) blows SP instead of signaling
	an arithmetic-error
	* intlog.d (I_I_ash_I): tighten the shift check (use 16-bit intW
	instead of 32-bit intWC) so that the "shift is too large"
	error is signaled instead of a SP overflow which results from
	__builtin_alloca not checking its argument and overwriting stack

2008-07-09  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1385641 ]: g++ debug_gcsafety amd64 build is broken
	* lispbibl.d (pgci_pointable, ngci_pointable) [DEBUG_GCSAFETY]:
	pass obj.one_o through pointable_address_unchecked before nonimmprobe
	(cgci_types_pointable, pgci_types_pointable, ngci_types_pointable)
	[TYPECODES & DEBUG_GCSAFETY]: wrap ?gci_pointable in