@@ -3533,7 +3533,8 @@ from once, <ulink url="http://common-lisp.net/project/cmucl/doc/cmu-user/extensi
 
 <simplesect id="probe-file"><title>Function &probe-file;</title>
 <para>&probe-file; cannot be used to check whether a directory exists.
- Use functions &probe-dir; or &directory; for this.</para></simplesect>
+ Use functions &probe-dir;, &probe-path; or &directory; for this.
+</para></simplesect>
 
 <simplesect id="file-author"><title>Function &file-author;</title>
 <para>&file-author; always returns &nil;, because the operating systems
@@ -3548,6 +3549,21 @@ from once, <ulink url="http://common-lisp.net/project/cmucl/doc/cmu-user/extensi
  to find the owner of the file.  See also
  <link linkend="file-properties"><function>OS:FILE-PROPERTIES</function></link>
  (&win32-only;).</para></simplesect>
+
+<simplesect id="probe-path"><title>Function &probe-path;</title>
+<para>Function &probe-path; returns the &truename; for its argument or
+ &nil; if it does not exist.  It figures out whether the argument
+ refers to a directory or a regular file, e.g., if you have a file
+ &file-r; and a directory &directory-r;, then<programlisting language="lisp">
+(&probe-path; #P"filename")
+<computeroutput>#P".../filename"</computeroutput>
+(&probe-path; #P"filename/")
+<computeroutput>#P".../filename"</computeroutput>
+(&probe-path; #P"directory")
+<computeroutput>#P".../directory/"</computeroutput>
+(&probe-path; #P"directory/")
+<computeroutput>#P".../directory/"</computeroutput>
+</programlisting></para></simplesect>
 
 <simplesect id="probe-dir"><title>Function &probe-dir;</title>
 <para><code>(&probe-dir; &path-r;)</code> tests whether &path-r; exists
