@@ -656,6 +656,7 @@ LISPSYM(absolute_pathname,"ABSOLUTE-PATHNAME",ext)
 LISPSYM(namestring,"NAMESTRING",lisp)
 LISPSYM(truename,"TRUENAME",lisp)
 LISPSYM(probe_file,"PROBE-FILE",lisp)
+LISPSYM(probe_pathname,"PROBE-PATHNAME",ext)
 LISPSYM(probe_directory,"PROBE-DIRECTORY",ext)
 LISPSYM(delete_file,"DELETE-FILE",lisp)
 LISPSYM(rename_file,"RENAME-FILE",lisp)
