@@ -834,6 +834,7 @@ LISPFUNN(absolute_pathname,1)
 LISPFUNNR(namestring,1)
 LISPFUNNR(truename,1)
 LISPFUNNR(probe_file,1)
+LISPFUNNR(probe_pathname,1)
 LISPFUNNR(probe_directory,1)
 LISPFUNN(delete_file,1)
 LISPFUNN(rename_file,2)
